--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,9 +24,10 @@ h1{
 	margin-top: 10px;
 }
 .error{
-	font-size: 25px;
+	font-size: 20px;
 	color:#e51c23;
 	text-align: center;
+    padding-bottom: 5px;
 }
 table, th, td {
 	border: 1px solid #2c3e50 !important;
