--- a/templates/add.html
+++ b/templates/add.html
@@ -4,6 +4,7 @@
 <div class="container center spacer">
 	<h1>Add a tutoring session</h1>
 	<br>
+	<div class="error">There is currently an issue with the way sessions are added to the website. Please be sure to follow the format when entering in your mods using regular mod times (e.g. 1-2, 10-15, or 15-16 are not okay) or else your session for those mods entered will not show up. We are sorry for the inconvenience and are looking to fix this bug as soon as possible. If you have any issues regarding this, please contact an NHS board member.</div>
 	<div class="error">{{error}}</div>
 	<form action="/add" method="post">
 		<div class="row center">
@@ -39,23 +40,23 @@
 				<div class="col-md-1"></div>
 				<div class="col-md-2">
 					<h5>Monday</h5>
-					<input class="form-control" name="mods_monday_1" placeholder='1-3'>
+					<input class="form-control" name="mods_monday_1" placeholder='1-3 OR 1-3, 4-6, etc.'>
 				</div>
 				<div class="col-md-2">
 					<h5>Tuesday</h5>
-					<input class="form-control" name="mods_tuesday_1" placeholder='1-3'>
+					<input class="form-control" name="mods_tuesday_1" placeholder='1-3 OR 1-3, 4-6, etc.'>
 				</div>
 				<div class="col-md-2">
 					<h5>Wednesday</h5>
-					<input class="form-control" name="mods_wednesday_1" placeholder='1-3'>
+					<input class="form-control" name="mods_wednesday_1" placeholder='1-3 OR 1-3, 4-6, etc.'>
 				</div>
 				<div class="col-md-2">
 					<h5>Thursday</h5>
-					<input class="form-control" name="mods_thursday_1" placeholder='1-3'>
+					<input class="form-control" name="mods_thursday_1" placeholder='1-3 OR 1-3, 4-6, etc.'>
 				</div>
 				<div class="col-md-2">
 					<h5>Friday</h5>
-					<input class="form-control" name="mods_friday_1" placeholder='1-3'>
+					<input class="form-control" name="mods_friday_1" placeholder='1-3 OR 1-3, 4-6, etc.'>
 				</div>
 			</div>
 		</div><br>
