--- a/templates/add.html
+++ b/templates/add.html
@@ -82,7 +82,7 @@
 			<div class="col-md-2"> \
 				<select class="form-control" name="subject'+number+'"> \
 					<option value="Math">Math</option> \
-					<option value="Litterature">Litterature</option> \
+					<option value="Literature">Literature</option> \
 					<option value="History">History</option> \
 					<option value="French">Language (French)</option> \
 					<option value="Spanish">Language (Spanish)</option> \
