--- a/templates/officer-videos.html
+++ b/templates/officer-videos.html
@@ -5,12 +5,12 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h1>Officer Videos</h1>
-			<!-- <h5>The NHS board has already been elected. Future candidates can use this page for ideas of what their video should be like.</h5> -->
+			<h5>The NHS board has already been elected. Future candidates can use this page for ideas of what their video should be like.</h5>
 			<hr>
 		</div>
 	</div>
 
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-md-6">
 			<h2><b>Justin Linetski</b></h2>
 			<h4>President</h4>
@@ -48,6 +48,6 @@
 			<iframe width="100%" height="315" src="https://www.youtube.com/embed/Oj3RGQbg7Mo" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
-	<hr>
+	<hr> -->
 </div>
 {% endblock %}
