--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -39,7 +39,7 @@
 		<div class="col-md-12">
 			<h4><b>Members: NHS Members in good standing must meet the following requiremetns at the end of senior year:</b></h4>
 			<ul>
-				<li>A cumulative GPA of at least 3.750 (or 3.500 for those inducted prior to 2016).</li>
+				<li>A cumulative GPA of at least 3.750.</li>
 				<li>At least 50 hours of community service.</li>
 				<li>Completion of at least 12 tutoring hours (these do not count towards community service) that were performed during senior year.</li>
 				<li>You must complete 4 hours during first trimester, 4 hours during second trimester, and 4 hours during third trimester. This means that newly inducted seniors only have to complete 8 hours, since they were not in the NHS during first trimester.</li>
