--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
                 </button>
                 <a class="navbar-brand" href="/"><img class="logo" src="/static/img/logo.png">BCA NHS</a>
             </div>
-            
+
             <div class="navbar-collapse collapse navbar-inverse-collapse">
 
                 <ul class="nav navbar-nav navbar-right">
@@ -37,7 +37,7 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">NHS Application <span class="caret"></span></a>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="https://docs.google.com/forms/d/1hzPFpOEE7YHrIIqAbHxaQoWm1m2WTcMqNjWlvezw2VE">BCA NHS Application</a></li>
+                        <li><a href="/application-closed">BCA NHS Application</a></li>
                         <li><a href="/requirements">Membership Requirements</a></li>
                       </ul>
                     </li>
@@ -74,6 +74,6 @@
 
     {% block content %}
     {% endblock %}
-    
+
 	</body>
 </html>
