--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,13 @@
         <div class="item">
             <div class="fill" style="background-image:url('/static/img/slideshow/2.JPG');"></div>
             <div class="carousel-caption">
-                <h1><a href="/officers">NHS BOARD</a></h1><h2>Have a question? Contact these board members.</h2>
+                <h1><a href="/officers">NHS BOARD</a></h1><h2>Have a question? Contact your <a href="/templates/officers.html">board members</a>.</h2>
             </div>
         </div>
         <div class="item">
             <div class="fill" style="background-image:url('/static/img/slideshow/3.JPG');"></div>
             <div class="carousel-caption">
-                <h1><a href="https://drive.google.com/folderview?id=0B-b_N1cpnpZ7STdCWGhMMkVLQk0&usp=sharing">PICTURES</a></h1><h2>Check out the 2014 NHS Induction pictures!</h2>
+                <h1><a href="https://drive.google.com/folderview?id=0B-b_N1cpnpZ7STdCWGhMMkVLQk0&usp=sharing">PICTURES</a></h1><h2>Check out the 2016 NHS Induction pictures!</h2>
             </div>
         </div>
     </div>
