--- a/templates/application-closed.html
+++ b/templates/application-closed.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Officer Videos{% endblock %}
+{% block title %}Application Closed{% endblock %}
 {% block content %}
 <div class="container small-spacer">
 	<div class="row">
 		<div class="col-md-12">
-			<h1>NHS Applications</h1>
+			<h1>NHS Application</h1>
 			<h5>The 2016-2017 NHS application has closed. Please stay tuned for next year.</h5>
 			<hr>
 		</div>
